# harreGPT

./: README.md  pyproject.toml  simple_tokenizer_v1.py  simple_tokenizer_v2.py
src/: bpe_tokenizer.py  gpt_dataset_v1.py  harre_gpt.py
